Техническое задание на разработку игры.md

--- a/Техническое задание на разработку игры.md
+++ b/Техническое задание на разработку игры.md
@@ -1,1 +1,73 @@
+### Техническое задание на разработку игры «Cosmic Garage: Nebula Workshop»
+Версия документа: 1.0
+Дата создания: 13.10.2025
+
+# Содержание
+1. Краткое описание
+2. Сюжет и предыстория
+3. Цели и задачи
+4. Целевая аудитория
+5. Жанр и ключевые особенности
+6. Игровой процесс
+7. Технические требования
+8. Содержание игры
+9. Интерфейс и управление
+10. Сценарий использования
+
+# Краткое описание
+«Cosmic Garage: Nebula Workshop» — это космический симулятор механика с процедурно генерируемыми астероидными полями и космическими станциями. Игрок — владелец мобильной ремонтной мастерской, который путешествует по сектору, чинит корабли, собирает утиль и создает уникальные конструкции в свободном песочном режиме.
+
+# *Сюжет и предыстория*
+Предыстория: Вы были обычным механиком на космической станции "Юпитер-7", но после банкротства станции у вас остался лишь старый грузовой корабль "Валькирия" и набор инструментов. Теперь вы — вольный механик, начинающий свой бизнес в необъятном Поясе Астероидов.
+
+__Сюжетная дуга:__
+
+1) Начало: Базовые заказы на починку, добыча ресурсов из астероидов.
+2) Развитие: Получение лицензии на работу с военными кораблями, открытие доступа к опасным системам.
+3) Кульминация: Возможность участвовать в гонках на собранных кораблях, стать поставщиком для крупной корпорации или возродить станцию "Юпитер-7" как свой хаб.
+4) Концовка: Открытие собственной космической верфи / Создание уникального корабля-легенды / Становление главным инженером флота.
+5) Философия: Как в Майнкрафте — сюжет есть, но он нелинейный и служит ориентиром, а не строгим сценарием.
+
+# Цели и задачи
+Цель проекта: Создать глубокий симулятор творчества и предпринимательства в космосе, где игрок сам определяет свой путь — от ремонтника до владельца верфи.
+
+__Задачи:__
+
+1) Реализовать систему полного разрушения/починки кораблей (как в "Space Engineers").
+2) Создать процедурный генератор астероидных полей и космических станций с уникальными повреждениями и заказами.
+3) Разработать интуитивную систему крафта и сборки от деталей до целых кораблей.
+4) Внедрить экономическую систему с динамическим спросом на услуги и ресурсы.
+
+# Целевая аудитория
+- Возраст: 14-40 лет.
+- Интересы: Поклонники инженерных игр (Space Engineers, Kerbal Space Program), творческие игроки (Minecraft, Terraria), любители космических симуляторов.
+- Уровень игрока: От новичков (простой ремонт) до продвинутых (создание сложных механизмов).
+
+# Жанр и ключевые особенности
+- Жанр: Космический симулятор механика/инженера с элементами песочницы.
+- Сеттинг: Научно-фантастическая вселенная "средней твердости".
+- Ключевые особенности:
+  1) Процедурная генерация уровней: Каждое астероидное поле и каждая поврежденная станция уникальны.
+  2) Свобода творчества: Можно чинить, переделывать или полностью разбирать на запчасти любой корабль.
+  3) Нелинейный сюжет: Игрок сам выбирает специализацию — ремонт, тюнинг, строительство с нуля или перепродажа.
+
+# Игровой процесс
+1) Прибытие на локацию: Сканирование области на наличие сигналов бедствия, богатых ресурсами астероидов, торговых путей.
+2) Анализ и планирование: Оценка состояния корабля-клиента, составление списка необходимых деталей и ресурсов.
+3) Работа:
+  - Добыча ресурсов (резка астероидов, сбор утиля).
+  - Крафт недостающих компонентов.
+  - Ремонт/модификация корабля с помощью инструментов.
+4) Тестирование: Проверка систем отремонтированного корабля (можно предложить клиенту тест-драйв).
+5) Получение оплаты и репутации.
+
+# Технические требования
+Компонент	Минимальные требования	Рекомендуемые требования
+ОС	Windows 10 (x64)	Windows 11 (x64)
+Процессор	Intel Core i5-6500 / AMD Ryzen 3 1200	Intel Core i7-9700K / AMD Ryzen 5 3600
+Оперативная память	8 GB RAM	16 GB RAM
+Видеокарта	NVIDIA GeForce GTX 970 / AMD Radeon R9 290	NVIDIA GeForce RTX 2070 / AMD Radeon RX 5700
+Место на диске	15 GB	25 GB (SSD)
+<img width="605" height="199" alt="image" src="https://github.com/user-attachments/assets/2e546b1b-d23a-474a-9bb5-8b2276617300" />
+
 
