--- a/Техническое задание на разработку игры.md
+++ b/Техническое задание на разработку игры.md
@@ -62,12 +62,65 @@ __Задачи:__
 5) Получение оплаты и репутации.
 
 # Технические требования
-Компонент	Минимальные требования	Рекомендуемые требования
-ОС	Windows 10 (x64)	Windows 11 (x64)
-Процессор	Intel Core i5-6500 / AMD Ryzen 3 1200	Intel Core i7-9700K / AMD Ryzen 5 3600
-Оперативная память	8 GB RAM	16 GB RAM
-Видеокарта	NVIDIA GeForce GTX 970 / AMD Radeon R9 290	NVIDIA GeForce RTX 2070 / AMD Radeon RX 5700
-Место на диске	15 GB	25 GB (SSD)
+
 <img width="605" height="199" alt="image" src="https://github.com/user-attachments/assets/2e546b1b-d23a-474a-9bb5-8b2276617300" />
 
+# Содержание игры
 
+1) Инструменты: 10+ видов (сварочный аппарат, резак, шлифмашина, диагностический сканер, 3D-принтер деталей).
+2) Компоненты: 50+ типов деталей (двигатели, генераторы, панели корпуса, компьютеры, оружие).
+3) Биомы астероидов: Ледяные, железные, кремниевые, радиоактивные, с органическими вкраплениями.
+4) Типы клиентов: Торговцы, пираты, исследователи, военные, туристы.
+5) Уникальные проекты: Сборка гоночного шаттла, переоборудование грузовика в дом на колесах, создание мобильной буровой установки.
+
+# Интерфейс и управление
+__Управление (PC):__
+
+- ЛКМ — использовать выбранный инструмент
+- ПКМ — отменить/вторичное действие
+- E — взаимодействовать (сесть в кресло, взять предмет)
+- R — сменить инструмент
+- Tab — открыть мобильный компьютер (схемы, заказы, карта)
+- I — инвентарь
+- G — строительный режим (размещение блоков)
+
+__Сценарий использования__
+
+- Сценарий: "Срочный заказ от пиратов"
+- Сигнал: На сканере появляется зашифрованный вызов. Приняв его, игрок получает заказ: "Починить двигатель боевого корабля 'Коготь'. Оплата двойная. Вопросы не приветствуются."
+- Прибытие: Игрок находит поврежденный пиратский истребитель, прячущийся внутри крупного астероида.
+- Диагностика: Сканер показывает — поврежден ионный двигатель, требуется 3 единицы кобальта и импульсный контроллер.
+- Решение: У игрока нет контроллера. Варианты:
+    - Честно сказать пиратам и потерять репутацию.
+    - Снять контроллер со своего корабля (рискуя своей мобильностью).
+    - Предложить пиратам "одолжить" контроллер с проходящего торгового судна (миссия с кражей).
+- Исполнение: Игрок выбирает кражу. Незаметно приближается к торговцу, отключает его системы EMP-пульой, забирает контроллер.
+- Завершение: Ремонт пиратского корабля, получение щедрой оплаты и репутации "того, кто может решить любую проблему".
+
+<img width="1589" height="898" alt="image" src="https://github.com/user-attachments/assets/3a87daf0-3f81-4daa-b826-fdc39eefa6df" />
+
+__Ключевые элементы интерфейса:__
+
+1) Левая панель - схема корабля и статус систем
+2) Центральная панель - инвентарь с ресурсами и инструментами
+3) Правая панель - детали текущего заказа, прогресс и награда
+
+__Цветовая кодировка:__
+
+- Красный - поврежденные системы/нехватка ресурсов
+- Зеленый - работающие системы/достаточно ресурсов
+- Желтый - предупреждения/советы
+
+# Система крафта и модификаций
+<img width="1440" height="989" alt="image" src="https://github.com/user-attachments/assets/77f221dd-35e6-4990-b1b0-ddaa5e294a72" />
+
+🔧 ПРОСТЫЕ РЕЦЕПТЫ ДЛЯ СТАРТА:
+========================================
+
+1. 🪨 Железная руда ×3  →  🔩 Стальные слитки ×1
+2. 🔩 Стальные слитки ×2 →  🛡️ Листы корпуса ×1
+3. 🔩 Медь ×2 + Кремний ×1 →  💡 Электронные платы ×1
+4. 🛡️ Листы корпуса ×3 + 💡 Платы ×2 →  🚀 Двигатель 1-го уровня ×1
+
+💡 СОВЕТ: Начни с улучшения грузового отсека!
+   Больше места = больше ресурсов за рейс!
