--- a/ТЗ на разработку игры.md
+++ b/ТЗ на разработку игры.md
@@ -1,9 +1,11 @@
-### Техническое задание на разработку игры «Cosmic Garage: Nebula Workshop»
+# Техническое задание на разработку игры «Cosmic Garage: Nebula Workshop»
+
 Версия документа: 1.0
 
 Дата создания: 13.10.2025
 
-# Содержание
+## Содержание
+
 1. Краткое описание
 2. Сюжет и предыстория
 3. Цели и задачи
@@ -15,13 +17,15 @@
 9. Интерфейс и управление
 10. Сценарий использования
 
-# Краткое описание
+## Краткое описание
+
 «Cosmic Garage: Nebula Workshop» — это космический симулятор механика с процедурно генерируемыми астероидными полями и космическими станциями. Игрок — владелец мобильной ремонтной мастерской, который путешествует по сектору, чинит корабли, собирает утиль и создает уникальные конструкции в свободном песочном режиме.
 
-# *Сюжет и предыстория*
+### Сюжет и предыстория
+
 Предыстория: Вы были обычным механиком на космической станции "Юпитер-7", но после банкротства станции у вас остался лишь старый грузовой корабль "Валькирия" и набор инструментов. Теперь вы — вольный механик, начинающий свой бизнес в необъятном Поясе Астероидов.
 
-__Сюжетная дуга:__
+### Сюжетная дуга:
 
 1) Начало: Базовые заказы на починку, добыча ресурсов из астероидов.
 2) Развитие: Получение лицензии на работу с военными кораблями, открытие доступа к опасным системам.
@@ -29,22 +33,25 @@ __Сюжетная дуга:__
 4) Концовка: Открытие собственной космической верфи / Создание уникального корабля-легенды / Становление главным инженером флота.
 5) Философия: Как в Майнкрафте — сюжет есть, но он нелинейный и служит ориентиром, а не строгим сценарием.
 
-# Цели и задачи
+## Цели и задачи
+
 Цель проекта: Создать глубокий симулятор творчества и предпринимательства в космосе, где игрок сам определяет свой путь — от ремонтника до владельца верфи.
 
-__Задачи:__
+### Задачи:
 
 1) Реализовать систему полного разрушения/починки кораблей (как в "Space Engineers").
 2) Создать процедурный генератор астероидных полей и космических станций с уникальными повреждениями и заказами.
 3) Разработать интуитивную систему крафта и сборки от деталей до целых кораблей.
 4) Внедрить экономическую систему с динамическим спросом на услуги и ресурсы.
 
-# Целевая аудитория
+## Целевая аудитория
+
 - Возраст: 14-40 лет.
 - Интересы: Поклонники инженерных игр (Space Engineers, Kerbal Space Program), творческие игроки (Minecraft, Terraria), любители космических симуляторов.
 - Уровень игрока: От новичков (простой ремонт) до продвинутых (создание сложных механизмов).
 
-# Жанр и ключевые особенности
+## Жанр и ключевые особенности
+
 - Жанр: Космический симулятор механика/инженера с элементами песочницы.
 - Сеттинг: Научно-фантастическая вселенная "средней твердости".
 - Ключевые особенности:
@@ -52,7 +59,8 @@ __Задачи:__
   2) Свобода творчества: Можно чинить, переделывать или полностью разбирать на запчасти любой корабль.
   3) Нелинейный сюжет: Игрок сам выбирает специализацию — ремонт, тюнинг, строительство с нуля или перепродажа.
 
-# Игровой процесс
+## Игровой процесс
+
 1) Прибытие на локацию: Сканирование области на наличие сигналов бедствия, богатых ресурсами астероидов, торговых путей.
 2) Анализ и планирование: Оценка состояния корабля-клиента, составление списка необходимых деталей и ресурсов.
 3) Работа:
@@ -62,11 +70,11 @@ __Задачи:__
 4) Тестирование: Проверка систем отремонтированного корабля (можно предложить клиенту тест-драйв).
 5) Получение оплаты и репутации.
 
-# Технические требования
+## Технические требования
 
 <img width="605" height="199" alt="image" src="https://github.com/user-attachments/assets/2e546b1b-d23a-474a-9bb5-8b2276617300" />
 
-# Содержание игры
+## Содержание игры
 
 1) Инструменты: 10+ видов (сварочный аппарат, резак, шлифмашина, диагностический сканер, 3D-принтер деталей).
 2) Компоненты: 50+ типов деталей (двигатели, генераторы, панели корпуса, компьютеры, оружие).
@@ -74,8 +82,9 @@ __Задачи:__
 4) Типы клиентов: Торговцы, пираты, исследователи, военные, туристы.
 5) Уникальные проекты: Сборка гоночного шаттла, переоборудование грузовика в дом на колесах, создание мобильной буровой установки.
 
-# Интерфейс и управление
-__Управление (PC):__
+## Интерфейс и управление
+
+### Управление (PC):
 
 - ЛКМ — использовать выбранный инструмент
 - ПКМ — отменить/вторичное действие
@@ -85,7 +94,7 @@ __Управление (PC):__
 - I — инвентарь
 - G — строительный режим (размещение блоков)
 
-__Сценарий использования__
+### Сценарий использования
 
 - Сценарий: "Срочный заказ от пиратов"
 - Сигнал: На сканере появляется зашифрованный вызов. Приняв его, игрок получает заказ: "Починить двигатель боевого корабля 'Коготь'. Оплата двойная. Вопросы не приветствуются."
@@ -100,19 +109,20 @@ __Сценарий использования__
 
 <img width="1589" height="898" alt="image" src="https://github.com/user-attachments/assets/3a87daf0-3f81-4daa-b826-fdc39eefa6df" />
 
-__Ключевые элементы интерфейса:__
+### Ключевые элементы интерфейса:
 
 1) Левая панель - схема корабля и статус систем
 2) Центральная панель - инвентарь с ресурсами и инструментами
 3) Правая панель - детали текущего заказа, прогресс и награда
 
-__Цветовая кодировка:__
+### Цветовая кодировка:
 
 - Красный - поврежденные системы/нехватка ресурсов
 - Зеленый - работающие системы/достаточно ресурсов
 - Желтый - предупреждения/советы
 
-# Система крафта и модификаций
+## Система крафта и модификаций
+
 <img width="1440" height="989" alt="image" src="https://github.com/user-attachments/assets/77f221dd-35e6-4990-b1b0-ddaa5e294a72" />
 
 🔧 ПРОСТЫЕ РЕЦЕПТЫ ДЛЯ СТАРТА:
