ТЗ на разработку игры.md

--- a/ТЗ на разработку игры.md
+++ b/ТЗ на разработку игры.md
@@ -7,7 +7,6 @@
 ## Содержание
 
 1. Краткое описание
-2. Сюжет и предыстория
 3. Цели и задачи
 4. Целевая аудитория
 5. Жанр и ключевые особенности
@@ -21,11 +20,11 @@
 
 «Cosmic Garage: Nebula Workshop» — это космический симулятор механика с процедурно генерируемыми астероидными полями и космическими станциями. Игрок — владелец мобильной ремонтной мастерской, который путешествует по сектору, чинит корабли, собирает утиль и создает уникальные конструкции в свободном песочном режиме.
 
-### Сюжет и предыстория
+#### Сюжет и предыстория
 
 Предыстория: Вы были обычным механиком на космической станции "Юпитер-7", но после банкротства станции у вас остался лишь старый грузовой корабль "Валькирия" и набор инструментов. Теперь вы — вольный механик, начинающий свой бизнес в необъятном Поясе Астероидов.
 
-### Сюжетная дуга:
+__Сюжетная дуга:__
 
 1) Начало: Базовые заказы на починку, добыча ресурсов из астероидов.
 2) Развитие: Получение лицензии на работу с военными кораблями, открытие доступа к опасным системам.
