ТЗ на разработку игры.md

--- a/ТЗ на разработку игры.md
+++ b/ТЗ на разработку игры.md
@@ -32,22 +32,16 @@ __Сюжетная дуга:__
 4) Концовка: Открытие собственной космической верфи / Создание уникального корабля-легенды / Становление главным инженером флота.
 5) Философия: Как в Майнкрафте — сюжет есть, но он нелинейный и служит ориентиром, а не строгим сценарием.
 
-## Цели и задачи
+### Цели и задачи
 
-Цель проекта: Создать глубокий симулятор творчества и предпринимательства в космосе, где игрок сам определяет свой путь — от ремонтника до владельца верфи.
+Цель проекта: Создать космический симулятор с процедурной генерацией уровней, где игрок развивается от механика до владельца верфи.
 
-### Задачи:
+#### Задачи: == переделать 
 
 1) Реализовать систему полного разрушения/починки кораблей (как в "Space Engineers").
 2) Создать процедурный генератор астероидных полей и космических станций с уникальными повреждениями и заказами.
 3) Разработать интуитивную систему крафта и сборки от деталей до целых кораблей.
 4) Внедрить экономическую систему с динамическим спросом на услуги и ресурсы.
-
-## Целевая аудитория
-
-- Возраст: 14-40 лет.
-- Интересы: Поклонники инженерных игр (Space Engineers, Kerbal Space Program), творческие игроки (Minecraft, Terraria), любители космических симуляторов.
-- Уровень игрока: От новичков (простой ремонт) до продвинутых (создание сложных механизмов).
 
 ## Жанр и ключевые особенности
 
@@ -55,10 +49,10 @@ __Сюжетная дуга:__
 - Сеттинг: Научно-фантастическая вселенная "средней твердости".
 - Ключевые особенности:
   1) Процедурная генерация уровней: Каждое астероидное поле и каждая поврежденная станция уникальны.
-  2) Свобода творчества: Можно чинить, переделывать или полностью разбирать на запчасти любой корабль.
+  2) Свобода творчества: Можно чинить, переделывать или полностью разбирать на запчасти любой корабль. 
   3) Нелинейный сюжет: Игрок сам выбирает специализацию — ремонт, тюнинг, строительство с нуля или перепродажа.
 
-## Игровой процесс
+## Игровой процесс == вынести в конец в дополнение
 
 1) Прибытие на локацию: Сканирование области на наличие сигналов бедствия, богатых ресурсами астероидов, торговых путей.
 2) Анализ и планирование: Оценка состояния корабля-клиента, составление списка необходимых деталей и ресурсов.
@@ -69,11 +63,11 @@ __Сюжетная дуга:__
 4) Тестирование: Проверка систем отремонтированного корабля (можно предложить клиенту тест-драйв).
 5) Получение оплаты и репутации.
 
-## Технические требования
+## Технические требования (функциональные/ нефункциональные)
 
-<img width="605" height="199" alt="image" src="https://github.com/user-attachments/assets/2e546b1b-d23a-474a-9bb5-8b2276617300" />
+переделать !!!
 
-## Содержание игры
+## Содержание игры == должна быть обоснованная конкретика почему именно 50 или 10 шт
 
 1) Инструменты: 10+ видов (сварочный аппарат, резак, шлифмашина, диагностический сканер, 3D-принтер деталей).
 2) Компоненты: 50+ типов деталей (двигатели, генераторы, панели корпуса, компьютеры, оружие).
@@ -93,7 +87,7 @@ __Сюжетная дуга:__
 - I — инвентарь
 - G — строительный режим (размещение блоков)
 
-### Сценарий использования
+### Сценарий использования == вынести в дополнение после игрового процесса
 
 - Сценарий: "Срочный заказ от пиратов"
 - Сигнал: На сканере появляется зашифрованный вызов. Приняв его, игрок получает заказ: "Починить двигатель боевого корабля 'Коготь'. Оплата двойная. Вопросы не приветствуются."
@@ -106,7 +100,7 @@ __Сюжетная дуга:__
 - Исполнение: Игрок выбирает кражу. Незаметно приближается к торговцу, отключает его системы EMP-пульой, забирает контроллер.
 - Завершение: Ремонт пиратского корабля, получение щедрой оплаты и репутации "того, кто может решить любую проблему".
 
-<img width="1589" height="898" alt="image" src="https://github.com/user-attachments/assets/3a87daf0-3f81-4daa-b826-fdc39eefa6df" />
+<img width="1589" height="898" alt="image" src="https://github.com/user-attachments/assets/3a87daf0-3f81-4daa-b826-fdc39eefa6df" /> == оставить здесь 
 
 ### Ключевые элементы интерфейса:
 
@@ -120,14 +114,14 @@ __Сюжетная дуга:__
 - Зеленый - работающие системы/достаточно ресурсов
 - Желтый - предупреждения/советы
 
-## Система крафта и модификаций
+## Система крафта и модификаций == в дополнение последнее
 
 <img width="1440" height="989" alt="image" src="https://github.com/user-attachments/assets/77f221dd-35e6-4990-b1b0-ddaa5e294a72" />
 
 🔧 ПРОСТЫЕ РЕЦЕПТЫ ДЛЯ СТАРТА:
 ========================================
 
-1. 🪨 Железная руда ×3  →  🔩 Стальные слитки ×1
+1. 🔩 Железная руда ×3  →  🔩 Стальные слитки ×1
 2. 🔩 Стальные слитки ×2 →  🛡️ Листы корпуса ×1
 3. 🔩 Медь ×2 + Кремний ×1 →  💡 Электронные платы ×1
 4. 🛡️ Листы корпуса ×3 + 💡 Платы ×2 →  🚀 Двигатель 1-го уровня ×1
