ТЗ на разработку игры.md

--- a/ТЗ на разработку игры.md
+++ b/ТЗ на разработку игры.md
@@ -118,7 +118,7 @@ __Сюжетная дуга:__
 
 <img width="1440" height="989" alt="image" src="https://github.com/user-attachments/assets/77f221dd-35e6-4990-b1b0-ddaa5e294a72" />
 
-🔧 ПРОСТЫЕ РЕЦЕПТЫ ДЛЯ СТАРТА:
+####🔧 ПРОСТЫЕ РЕЦЕПТЫ ДЛЯ СТАРТА:
 ========================================
 
 1. 🔩 Железная руда ×3  →  🔩 Стальные слитки ×1
