ТЗ на разработку игры.md

--- a/ТЗ на разработку игры.md
+++ b/ТЗ на разработку игры.md
@@ -38,10 +38,54 @@ __Сюжетная дуга:__
 
 #### Задачи: == переделать 
 
-1) Реализовать систему полного разрушения/починки кораблей (как в "Space Engineers").
-2) Создать процедурный генератор астероидных полей и космических станций с уникальными повреждениями и заказами.
-3) Разработать интуитивную систему крафта и сборки от деталей до целых кораблей.
-4) Внедрить экономическую систему с динамическим спросом на услуги и ресурсы.
+**Задачи проекта:**
+
+  1. *Создать случайные уровни и астероидные поля*
+     - Чтобы каждая игровая сессия была уникальной
+     - Разные расположения планет, станций и астероидов
+     - Разный набор ресурсов и опасностей на каждом уровне
+
+  2. *Сделать систему поломок и починки кораблей*
+     - Корабли должны ломаться по-разному
+     - Игрок может чинить детали и заменять их
+     - Видно повреждения на корабле
+
+  3. *Создать систему создания деталей*
+     - Из ресурсов можно создавать запчасти
+     - От простых деталей к сложным
+     - Можно улучшать оборудование
+
+  4. *Настроить экономику и карьерный рост*
+     - Цены меняются в зависимости от спроса
+     - Репутация с разными группами (торговцы, пираты, военные)
+     - От мелкого механика до владельца большой станции
+
+  5. *Сделать умных компьютерных персонажей*
+     - Разные типы клиентов с разным поведением
+     - Случайные встречи в космосе
+     - Диалоги и переговоры
+  
+  6. *Создать инструменты для работы*
+     - Разные инструменты для разных задач
+     - Сканер для поиска проблем
+     - Инструменты для ремонта и сборки
+  
+  7. *Сделать игру быстрой и плавной*
+     - Чтобы не тормозило даже при многих объектах
+     - Быстрая загрузка уровней
+     - Работа на разных компьютерах
+  
+  8. *Создать удобное управление и интерфейс*
+     - Понятные кнопки и меню
+     - Ясно видно что происходит с кораблем
+     - Легко находить нужные инструменты
+  
+  ***Дополнительные задачи:***
+  
+  9. Система сохранения игры
+  10. Возможность добавлять свои модификации
+  11. Тестирование и исправление ошибок
+  12. Поддержка разных языков
 
 ## Жанр и ключевые особенности
 
@@ -52,28 +96,140 @@ __Сюжетная дуга:__
   2) Свобода творчества: Можно чинить, переделывать или полностью разбирать на запчасти любой корабль. 
   3) Нелинейный сюжет: Игрок сам выбирает специализацию — ремонт, тюнинг, строительство с нуля или перепродажа.
 
-## Игровой процесс == вынести в конец в дополнение
-
-1) Прибытие на локацию: Сканирование области на наличие сигналов бедствия, богатых ресурсами астероидов, торговых путей.
-2) Анализ и планирование: Оценка состояния корабля-клиента, составление списка необходимых деталей и ресурсов.
-3) Работа:
-  - Добыча ресурсов (резка астероидов, сбор утиля).
-  - Крафт недостающих компонентов.
-  - Ремонт/модификация корабля с помощью инструментов.
-4) Тестирование: Проверка систем отремонтированного корабля (можно предложить клиенту тест-драйв).
-5) Получение оплаты и репутации.
-
 ## Технические требования (функциональные/ нефункциональные)
 
-переделать !!!
+## Технические требования
 
-## Содержание игры == должна быть обоснованная конкретика почему именно 50 или 10 шт
+### Функциональные требования
 
-1) Инструменты: 10+ видов (сварочный аппарат, резак, шлифмашина, диагностический сканер, 3D-принтер деталей).
-2) Компоненты: 50+ типов деталей (двигатели, генераторы, панели корпуса, компьютеры, оружие).
-3) Биомы астероидов: Ледяные, железные, кремниевые, радиоактивные, с органическими вкраплениями.
-4) Типы клиентов: Торговцы, пираты, исследователи, военные, туристы.
-5) Уникальные проекты: Сборка гоночного шаттла, переоборудование грузовика в дом на колесах, создание мобильной буровой установки.
+**Управление и физика**
+
+- Реалистичное управление кораблем с инерцией и плавным торможением
+- Физика столкновений и повреждений кораблей
+- Система гравитации и орбитальной механики
+
+**Системы взаимодействия**
+
+- Сканирование объектов на расстоянии с определением состава и повреждений
+- Инструменты для ремонта и сборки с разными режимами работы
+- Система стыковки с другими кораблями и станциями
+
+**Создание и модификация**
+
+- Дерево крафта от простых деталей до сложных модулей
+- Система улучшений кораблей с балансом характеристик
+- Возможность полной перестройки и кастомизации кораблей
+
+**Экономика и прогресс**
+
+- Динамические цены на ресурсы и услуги
+- Система репутации с 5 фракциями
+- Карьерный рост от механика до владельца верфи
+
+**Генерация мира**
+
+- Процедурное создание уникальных звездных систем
+- Случайное распределение ресурсов, станций и событий
+- Генерация астероидных полей разных типов
+
+### Нефункциональные требования
+
+**Графика и визуализация**
+
+- Стиль: стилизованный реализм
+- Поддержка современных графических технологий
+- Эффекты освещения и частиц для космической атмосферы
+- Четкая визуализация повреждений и состояния систем
+
+**Надежность и стабильность**
+
+- Автосохранение прогресса каждые 5 минут
+- Защита от потери данных при сбоях
+- Совместимость с различными конфигурациями ПК
+- Система восстановления после ошибок
+
+**Пользовательский опыт**
+
+- Интуитивное управление клавиатурой и мышью
+- Адаптивный интерфейс с настройкой сложности
+- Пошаговое обучение для новых игроков
+- Подсказки и система помощи в процессе игры
+
+**Сетевые возможности**
+
+- Система лидеров и достижений
+- Совместимость с игровыми платформами
+- Подготовка к возможному мультиплееру
+- Поддержка пользовательского контента
+
+## Содержание игры
+
+### 1. Инструменты: 10 видов
+
+**Обоснование количества:** 10 инструментов достаточно чтобы охватить все основные виды работ механика, но не перегружать игрока сложным выбором.
+
+**Конкретный состав:**
+
+- **Диагностические (2):** Сканер повреждений, Мультиметр
+- **Ремонтные (3):** Сварочный аппарат, Плазменный резак, Клепальный пистолет  
+- **Обработка (3):** Шлифовальный станок, Токарный инструмент, Гравитационный ключ
+- **Сборка (2):** Монтажный манипулятор, 3D-принтер деталей
+
+*Каждый инструмент имеет уникальное применение в цепочке ремонта.*
+
+### 2. Компоненты: 54 типа деталей
+
+**Обоснование количества:** 54 детали позволяют создать 15+ различных конфигураций кораблей при сохранении баланса между разнообразием и сложностью освоения.
+
+**Распределение по категориям:**
+
+- **Корпусные (12):** 6 типов панелей + 6 структурных элементов
+- **Двигательные (9):** 3 размера × 3 типа тяги
+- **Энергетические (9):** Генераторы, батареи, распределители  
+- **Управление (6):** Компьютеры, навигация, сенсоры
+- **Жизнеобеспечение (6):** Кислород, вода, отсеки экипажа
+- **Специализированные (12):** Оружие, щиты, грузовые модули
+
+### 3. Биомы астероидов: 5 типов
+
+**Обоснование количества:** 5 биомов обеспечивают четкое различие в геймплее без избыточного усложнения балансировки ресурсов.
+
+**Конкретные биомы и их назначение:**
+
+- **Железные:** Основной источник металлов (70% железа, 30% никеля)
+- **Кремниевые:** Электронные компоненты (кремний, золото, медь)  
+- **Ледяные:** Вода и топливо (лед, аммиак, метан)
+- **Радиоактивные:** Энергетические ресурсы (уран, торий)
+- **Органические:** Редкие материалы (биополимеры, катализаторы)
+
+### 4. Типы клиентов: 5 фракций
+
+**Обоснование количества:** 5 фракций представляют основные игровые архетипы с уникальными механиками взаимодействия.
+
+**Фракции и их особенности:**
+
+- **Торговцы:** Стандартный ремонт, большие объемы, надежная оплата
+- **Исследователи:** Сложный ремонт, уникальные технологии, высокая репутация
+- **Военные:** Срочные заказы, улучшенное вооружение, строгие стандарты
+- **Пираты:** Нелегальные модификации, высокий риск/вознаграждение
+- **Туристы:** Косметические улучшения, комфортные системы, щедрые чаевые
+
+### 5. Уникальные проекты: 8 специальных сборок
+
+**Обоснование количества:** 8 проектов обеспечивают долгосрочные цели на 40-60 часов игрового времени.
+
+**Конкретные проекты:**
+
+1. **Гоночный шаттл** - максимальная скорость, минимальная масса
+2. **Грузовой корабль-дом** - жилые отсеки + грузовое пространство  
+3. **Мобильная буровая установка** - добыча ресурсов с астероидов
+4. **Сканирующая лаборатория** - улучшенные сенсоры и анализ
+5. **Боевой корабль сопровождения** - защита и вооружение
+6. **Спасательный корабль** - медицинские и ремонтные модули
+7. **Стелс-разведчик** - малозаметность, сканирование
+8. **Верфи-носитель** - мобильная ремонтная база
+
+*Каждый проект требует освоения соответствующих технологий и компонентов.*
 
 ## Интерфейс и управление
 
@@ -87,7 +243,20 @@ __Сюжетная дуга:__
 - I — инвентарь
 - G — строительный режим (размещение блоков)
 
-### Сценарий использования == вынести в дополнение после игрового процесса
+## Дополнения:
+
+### Игровой процесс
+
+1) Прибытие на локацию: Сканирование области на наличие сигналов бедствия, богатых ресурсами астероидов, торговых путей.
+2) Анализ и планирование: Оценка состояния корабля-клиента, составление списка необходимых деталей и ресурсов.
+3) Работа:
+  - Добыча ресурсов (резка астероидов, сбор утиля).
+  - Крафт недостающих компонентов.
+  - Ремонт/модификация корабля с помощью инструментов.
+4) Тестирование: Проверка систем отремонтированного корабля (можно предложить клиенту тест-драйв).
+5) Получение оплаты и репутации.
+
+### Сценарий использования
 
 - Сценарий: "Срочный заказ от пиратов"
 - Сигнал: На сканере появляется зашифрованный вызов. Приняв его, игрок получает заказ: "Починить двигатель боевого корабля 'Коготь'. Оплата двойная. Вопросы не приветствуются."
@@ -114,7 +283,7 @@ __Сюжетная дуга:__
 - Зеленый - работающие системы/достаточно ресурсов
 - Желтый - предупреждения/советы
 
-## Система крафта и модификаций == в дополнение последнее
+### Система крафта и модификаций
 
 <img width="1440" height="989" alt="image" src="https://github.com/user-attachments/assets/77f221dd-35e6-4990-b1b0-ddaa5e294a72" />
 
