ТЗ на разработку игры.md

--- a/ТЗ на разработку игры.md
+++ b/ТЗ на разработку игры.md
@@ -7,14 +7,13 @@
 ## Содержание
 
 1. Краткое описание
-3. Цели и задачи
-4. Целевая аудитория
-5. Жанр и ключевые особенности
-6. Игровой процесс
-7. Технические требования
-8. Содержание игры
-9. Интерфейс и управление
-10. Сценарий использования
+2. Цели и задачи
+3. Жанр и ключевые особенности
+4. Игровой процесс
+5. Технические требования
+6. Содержание игры
+7. Интерфейс и управление
+8. Сценарий использования
 
 ## Краткое описание
 
@@ -36,9 +35,7 @@ __Сюжетная дуга:__
 
 Цель проекта: Создать космический симулятор с процедурной генерацией уровней, где игрок развивается от механика до владельца верфи.
 
-#### Задачи: == переделать 
-
-**Задачи проекта:**
+#### Задачи:
 
   1. *Создать случайные уровни и астероидные поля*
      - Чтобы каждая игровая сессия была уникальной
@@ -97,8 +94,6 @@ __Сюжетная дуга:__
   3) Нелинейный сюжет: Игрок сам выбирает специализацию — ремонт, тюнинг, строительство с нуля или перепродажа.
 
 ## Технические требования (функциональные/ нефункциональные)
-
-## Технические требования
 
 ### Функциональные требования
 
