ТЗ на разработку игры.md

--- a/ТЗ на разработку игры.md
+++ b/ТЗ на разработку игры.md
@@ -238,19 +238,6 @@ __Сюжетная дуга:__
 - I — инвентарь
 - G — строительный режим (размещение блоков)
 
-## Дополнения:
-
-### Игровой процесс
-
-1) Прибытие на локацию: Сканирование области на наличие сигналов бедствия, богатых ресурсами астероидов, торговых путей.
-2) Анализ и планирование: Оценка состояния корабля-клиента, составление списка необходимых деталей и ресурсов.
-3) Работа:
-  - Добыча ресурсов (резка астероидов, сбор утиля).
-  - Крафт недостающих компонентов.
-  - Ремонт/модификация корабля с помощью инструментов.
-4) Тестирование: Проверка систем отремонтированного корабля (можно предложить клиенту тест-драйв).
-5) Получение оплаты и репутации.
-
 ### Сценарий использования
 
 - Сценарий: "Срочный заказ от пиратов"
@@ -264,7 +251,20 @@ __Сюжетная дуга:__
 - Исполнение: Игрок выбирает кражу. Незаметно приближается к торговцу, отключает его системы EMP-пульой, забирает контроллер.
 - Завершение: Ремонт пиратского корабля, получение щедрой оплаты и репутации "того, кто может решить любую проблему".
 
-<img width="1589" height="898" alt="image" src="https://github.com/user-attachments/assets/3a87daf0-3f81-4daa-b826-fdc39eefa6df" /> == оставить здесь 
+<img width="1589" height="898" alt="image" src="https://github.com/user-attachments/assets/3a87daf0-3f81-4daa-b826-fdc39eefa6df" />
+
+## Дополнения:
+
+### Игровой процесс
+
+1) Прибытие на локацию: Сканирование области на наличие сигналов бедствия, богатых ресурсами астероидов, торговых путей.
+2) Анализ и планирование: Оценка состояния корабля-клиента, составление списка необходимых деталей и ресурсов.
+3) Работа:
+  - Добыча ресурсов (резка астероидов, сбор утиля).
+  - Крафт недостающих компонентов.
+  - Ремонт/модификация корабля с помощью инструментов.
+4) Тестирование: Проверка систем отремонтированного корабля (можно предложить клиенту тест-драйв).
+5) Получение оплаты и репутации.
 
 ### Ключевые элементы интерфейса:
 
